# deltasync

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
src/: client.rs  common.rs  hash_file.rs  main.rs  remote_start.rs  server.rs  sync.rs  utils.rs
test/: file_to_hash.txt
